tests/test_proof/bad/enums_inj-empty.catala_en
## Article

```catala
declaration enumeration E:
  -- C1
  -- C2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals C1
  definition y under condition x = C1 consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/enums_inj-empty.catala_en:10.10-11:
└──┐
10 │   context y content integer
   │           ‾
   └─ Article
[WARNING] The constructor "C2" of enumeration "E" is never used; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/enums_inj-empty.catala_en:6.5-7:
└─┐
6 │   -- C2
  │      ‾‾
  └─ Article
[ERROR] [A.y] This variable might return an empty error:
┌─⯈ tests/test_proof/bad/enums_inj-empty.catala_en:10.10-11:
└──┐
10 │   context y content integer
   │           ‾
   └─ Article
Counterexample generation is disabled so none was generated.
```
